--- a/CyberExtension/popup.html
+++ b/CyberExtension/popup.html
@@ -57,10 +57,10 @@
   <div class="container">
     <h1>Cybershield Extension</h1>
     <div class="input-container">
-      <input type="text" id="linkInput" placeholder="Entrez le lien a verifier">
+      <input type="text" id="linkInput" placeholder="Enter the link to verify">
     </div>
     <div class="button-container">
-      <button id="checkButton">Verifier</button>
+      <button id="checkButton">Check</button>
     </div>
     <div id="result"></div>
   </div>
